:alembic: atualizando dados
atualizando dados

--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Situação 2.0\n",
+      "Valor de M. 67506.0\n",
+      "LPA 0.0\n",
+      "VPA 0.01\n",
+      "P/L -0.16\n",
+      "EV/EBITDA 4.81\n",
+      "Dividend Yield 0.46\n",
+      "Margem Bruta 100.0\n",
+      "Margem EBITDA 6.39\n",
+      "Margem Liquida 0.0\n",
+      "ROE 6.0\n",
+      "ROA 1.0\n",
+      "Div Liquida/EBITDA 0.87\n",
+      "Liq. Corrente 0.93\n",
       "     Situação   Valor de M.    LPA    VPA    P/L  EV/EBITDA  Dividend Yield  \\\n",
       "0         2.0  1.334627e+09   0.57  36.03  24.71       4.81            0.85   \n",
       "1         2.0  1.519060e+10   0.18   0.80  14.92       4.81           15.27   \n",
@@ -72,12 +86,16 @@
     "#data = pd.read_excel('BD completo.xlsx')\n",
     "data = pd.read_excel('dados_filtrados.xlsx')\n",
     "\n",
+    "# Definir o dicionário de mapeamento\n",
+    "mapeamento = {'bom': 0, 'medio': 1, 'ruim': 2}\n",
+    "\n",
     "# Aplicar o mapeamento na coluna do dataframe\n",
     "data['Situação'] = data['Situação'].map(mapeamento)\n",
     "\n",
     "for column in data.columns:\n",
     "    # Calcular a moda da coluna\n",
     "    mode_value = data[column].mode()[0]\n",
+    "    print(column, mode_value)\n",
     "    \n",
     "    # Substituir os valores NaN pela moda da coluna\n",
     "    data[column].fillna(mode_value, inplace=True)\n",
@@ -88,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -98,18 +116,47 @@
       "c:\\Python310\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0,\n",
+       "       0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0,\n",
+       "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Aplicar o algoritmo K-means para criar os clusters\n",
     "k = 3\n",
     "kmeans = KMeans(n_clusters=k, random_state=42)\n",
-    "clusters = kmeans.fit_predict(data)"
+    "clusters = kmeans.fit_predict(data)\n",
+    "\n",
+    "clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -164,9 +211,9 @@
      "output_type": "stream",
      "text": [
       "   Situação   Valor de M.       LPA       VPA       P/L  EV/EBITDA  \\\n",
-      "0       2.0  2.874435e+09 -7.144011  34.70415  8.930279   5.662869   \n",
-      "1       2.0  2.036285e+11  1.794000  17.44200  7.686000   7.148000   \n",
-      "2       2.0  5.769852e+10  1.287500  11.42000  9.809167  12.049167   \n",
+      "0  1.754875  2.874435e+09 -7.144011  34.70415  8.930279   5.662869   \n",
+      "1  2.000000  2.036285e+11  1.794000  17.44200  7.686000   7.148000   \n",
+      "2  1.916667  5.769852e+10  1.287500  11.42000  9.809167  12.049167   \n",
       "\n",
       "   Dividend Yield  Margem Bruta  Margem EBITDA  Margem Liquida        ROE  \\\n",
       "0        1.594485     84.532813     -18.452730       10.378983  16.564318   \n",
@@ -200,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Silhouette Score: 0.8878866024334766\n",
+      "Silhouette Score: 0.8878866024334763\n",
       "Davies-Bouldin Index: 0.4140916087741046\n"
      ]
     }
